client-app/common-sync/common/objects/OBJ_SAP_ETL_Log__c/OBJ_SAP_ETL_Log__c.object-meta.xml
<CustomObject>
    <label>OBJ SAP ETL Log</label>
    <nameField>
        <label>FLD SAP ETL Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OBJ SAP ETL Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>