client-app/common-sync/common/objects/OBJ_SAP_ETL_Log__c/fields/FLD_LogLevel__c.field-meta.xml
<CustomField>
    <fullName>FLD_LogLevel__c</fullName>
    <label>FLD Log Level</label>
    <length>16</length>
    <type>Text</type>
</CustomField>