client-app/common-sync/common/objects/OBJ_SAP_ETL_Log__c/fields/FLD_Message__c.field-meta.xml
<CustomField>
    <fullName>FLD_Message__c</fullName>
    <label>FLD Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>