client-app/common-sync/common/objects/OBJ_SAP_ETL_Log__c/fields/FLD_RecordJson__c.field-meta.xml
<CustomField>
    <fullName>FLD_RecordJson__c</fullName>
    <label>FLD Record Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>