client-app/common-sync/common/objects/OBJ_SAP_ETL_Log__c/fields/FLD_RecordNumber__c.field-meta.xml
<CustomField>
    <fullName>FLD_RecordNumber__c</fullName>
    <label>FLD Record Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>